# ggml

./: CMakeLists.txt
include/: ggml-ac4k.h
src/: CMakeLists.txt  ggml-backend-reg.cpp  ggml-impl.h
src/ggml-ac4k/: CMakeLists.txt  ac4k.md  acc.cuh  add-id.cuh  arange.cuh  argmax.cuh  argsort.cuh  binbcast.cuh  clamp.cuh  common.cuh  concat.cuh  conv-transpose-1d.cuh  conv2d-dw.cuh  conv2d-transpose.cuh  conv2d.cuh  count-equal.cuh  cpy.cuh  cross-entropy-loss.cuh  diagmask.cuh  fattn-common.cuh  fattn-mma-f16.cuh  fattn-tile.cuh  fattn-vec-f16.cuh  fattn-vec-f32.cuh  fattn-wmma-f16.cuh  fattn.cuh  getrows.cuh  ggml-ac4k.cu  gla.cuh  im2col.cuh  mean.cuh  mmf.cuh  mmq.cuh  mmvf.cuh  mmvq.cuh  norm.cuh  opt-step-adamw.cuh  opt-step-sgd.cuh  out-prod.cuh  pad.cuh  (+16 more)
src/ggml-ac4k/cuda/: acc.cu
src/ggml-ac4k/rocm/: CMakeLists.txt
